// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`follow-imports one level default import 1`] = `
Object {
  "exportedAs": "default",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-default-export.js",
  "loc": Object {
    "end": Object {
      "column": 24,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
}
`;

exports[`follow-imports one level import 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-named-export.js",
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 28,
      "line": 1,
    },
  },
}
`;

exports[`follow-imports one level index import 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-named-export.js",
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 28,
      "line": 1,
    },
  },
}
`;

exports[`follow-imports one level namespace import 1`] = `
Object {
  "exportedAs": "default",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/button-default-export.js",
  "loc": Object {
    "end": Object {
      "column": 24,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
}
`;

exports[`follow-imports simple import 1`] = `
Object {
  "exportedAs": "Button",
  "filePath": "/Users/atanasster/component-controls/core/instrument/test/examples/follow-imports/direct-import.js",
  "loc": Object {
    "end": Object {
      "column": 30,
      "line": 1,
    },
    "start": Object {
      "column": 28,
      "line": 1,
    },
  },
}
`;
